--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":"16.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node index.js",
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.2"
   }
 }
